Fix warnings and build order and change to j10 min.